Update color palette and add notebook style

--- a/mma.scss
+++ b/mma.scss
@@ -49,7 +49,7 @@ $green: #6E8413;
     color: $cyan;
   }
   .vc { // Local scope variables
-    color: #6a58aa;
+    color: #5d9066;
   }
   .err { // Any unrecognized input that is not lexed correctly
     color: $dark-gray;
