--- a/mma.scss
+++ b/mma.scss
@@ -2,16 +2,16 @@
  * Copyright (c) 2016 rsmenon
  * Licensed under the MIT License (https://opensource.org/licenses/MIT)
  */
-
-$light-gray: #aaaaaa;
-$dark-gray: #555555;
-$black: #353f42;
+$light-gray: rgb(153, 153, 153);
+$dark-gray: rgb(102, 102, 102);
+$black: #000;
 $orange: #b66a4b;
-$magenta: #ab466a;
-$blue: #4b78b1;
+$magenta: rgb(221, 17, 0);
+$blue: rgb(0, 44, 195);
 $cyan: #499A9F;
-$green: #6E8413;
+$green: rgb(67, 137, 88);
 
+.highlight-wl .highlight,
 .language-mathematica,
 .language-mma,
 .language-nb,
@@ -25,9 +25,6 @@ $green: #6E8413;
   .nb { // Builtins
     color: $black;
   }
-  .ne { // Messages (the "foo" in General::foo)
-    color: $magenta;
-  }
   .nf { // Slots
     color: $green;
     font-style: italic;
@@ -40,18 +37,21 @@ $green: #6E8413;
     color: $blue;
   }
   .o { // Operators
-    color: $dark-gray;
+    color: $black;
   }
   .p { // Groupings
-    color: $dark-gray;
+    color: $black;
   }
   .s { // Strings
-    color: $cyan;
+    color: $dark-gray;
   }
   .vc { // Local scope variables
-    color: #5d9066;
+    color: $green;
   }
   .err { // Any unrecognized input that is not lexed correctly
     color: $dark-gray;
+  }
+  * {
+    color: $black;
   }
 }
